--- a/contract-deployment-demos/hardhat-demo/package.json
+++ b/contract-deployment-demos/hardhat-demo/package.json
@@ -12,8 +12,7 @@
   "keywords": [],
   "license": "MIT",
   "dependencies": {
-    "dotenv": "^16.4.5",
-    "hardhat": "^2.20.1"
+    "dotenv": "^16.4.5"
   },
   "devDependencies": {
     "@nomicfoundation/hardhat-chai-matchers": "^2.0.0",
@@ -28,6 +27,7 @@
     "@types/node": ">=16.0.0",
     "chai": "^4.2.0",
     "ethers": "^6.4.0",
+    "hardhat": "^2.22.2",
     "hardhat-gas-reporter": "^1.0.8",
     "solidity-coverage": "^0.8.0",
     "ts-node": ">=8.0.0",
