--- a/frontend_examples/nextjs_wagmi_template/package.json
+++ b/frontend_examples/nextjs_wagmi_template/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@rainbow-me/rainbowkit": "^2.0.5",
     "@tanstack/react-query": "^5.28.6",
+    "element-ui": "^2.15.14",
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18",
